kubernetes/kube-prod-d1/stashapp/prod-d1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: stashapp
  name: stashapp
  namespace: stashapp
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: stashapp
  template:
    metadata:
      labels:
        app: stashapp
    spec:
      containers:
        - name: stashapp
          image: stashapp/stash:latest@sha256:df744af5a0c976e2ec671052ecc1f8a9aa757fa12b8f9930b59910b7295f0da6
          ports:
          - name: http
            containerPort: 9999
          volumeMounts:
          - name: stashapp-config
            mountPath: /root/.stash
          - name: data
            mountPath: /data
      volumes:
        - name: stashapp-config
          persistentVolumeClaim:
            claimName: stashapp-pvc
            readOnly: false
        - name: stashapp-backup-storage ## Uncomment this and set claimname to PVC
          persistentVolumeClaim:
            claimName: pvc-7bf57b38-2bff-47cf-92a9-60cf0a11c707
            readOnly: false
        - name: data
          nfs:
            server: 10.15.21.5
            path: /mnt/user/adult/
