kubernetes/kube-prod-d1/stashapp/prod-d1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stashapp-web
  namespace: stashapp
  labels:
    app: stashapp
spec:
  type: ClusterIP
  ports:
    - port: 9999
      targetPort: 9999
      protocol: TCP
  selector:
    app: stashapp
